--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1675,7 +1675,7 @@ th {
 }
 
 .table > tbody + tbody {
-  border-top: 2px solid #dddddd;
+  /*border-top: 2px solid #dddddd;*/
 }
 
 .table .table {
