--- a/css/style.css
+++ b/css/style.css
@@ -3,13 +3,21 @@ img
 	padding: 1em;
 }
 
-.logo
-{
-	margin-left: 1em;	
+
+.nav {
+	width: 1250px;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 15px;
+	margin-bottom: 10px;
 }
 .headerlinks
 {
 	color: white;
+	font-size: 1.5em;
+	display: inline-block;
+	float: right;
+	margin-top: 20px;
 }
 .headerlinks:hover
 {
