--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ img
 
 
 .nav {
-	width: 1250px;
+	/*width: 1250px;*/
 	margin-left: auto;
 	margin-right: auto;
 	margin-top: 15px;
@@ -16,8 +16,11 @@ img
 	color: white;
 	font-size: 1.5em;
 	display: inline-block;
-	float: right;
 	margin-top: 20px;
+}
+.borderhere
+{
+	border: 2px solid red;
 }
 .headerlinks:hover
 {
@@ -38,7 +41,7 @@ img
 	background-size: cover;
 	background-position:center;
 }
-.title .col-md-2
+.title .col-md-1
 {
 	text-align: center;
 }
@@ -55,6 +58,10 @@ img
 {
 	color: white;
 	padding: 1em;
+}
+.featuredboxes .col-md-2
+{
+	text-align: center;
 }
 .avatar
 {
