--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,14 @@
+@font-face {
+    font-family: 'archermedium';
+    src: url('../fonts/archer-medium-pro-webfont.eot');
+    src: url('../fonts/archer-medium-pro-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/archer-medium-pro-webfont.woff') format('woff'),
+         url('../fonts/archer-medium-pro-webfont.ttf') format('truetype'),
+         url('../fonts/archer-medium-pro-webfont.svg#archermedium') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
 h3, h4
 {
 	margin: 0;
@@ -5,11 +16,6 @@ h3, h4
 img
 {
 	padding: 1em;
-}
-
-.btn
-{
-	border-radius: 10px;
 }
 .btn-info
 {
@@ -26,7 +32,7 @@ img
 }
 .homeprice
 {
-	color: white;
+	color: #1fb7cf;
 	font-size: 2em;
 }
 .row
@@ -35,7 +41,7 @@ img
 	margin-right: 0;
 }
 .nav-pills a {
-	color: white;
+	color: black;
 }
 .nav-pills > li > a:hover {
     background-color: rgb(66, 139, 202);
@@ -63,13 +69,16 @@ img
 .title
 {
 	background: #353b3f url(../img/background.png) no-repeat 0 0;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
 	background-size: cover;
-	background-position:center;
 }
 .nav
 {
 	display: block;
 	margin-left: 5em;
+	margin-top: 2em !important;
 	text-align: center;
 }
 .logo {
@@ -105,6 +114,8 @@ img
 }
 .tagline
 {
+	font-family: "archermedium", slab-serif !important;
+	color: #34353b !important;
 	text-align: center;
 	color: white;
 	margin-top: 0.8em;
@@ -121,8 +132,13 @@ img
 }
 .featured-box-subtitle
 {
-	color: white;
+	color: #34353b;	
 }
+.namesubtag
+{
+	color: #72737f !important;
+}
+
 .avatar
 {
 	border-radius:100%;
@@ -147,6 +163,7 @@ img
 }
 .box-price
 {
+	color: #1fb7cf;
 	font-size: 1.75em;
 }
 .namesubtag
