published design for curators pages.

--- a/css/style.css
+++ b/css/style.css
@@ -124,7 +124,7 @@ a:hover
 }
 .subheading
 {
-	text-align: center;
+	padding-bottom: 1em;
 }
 .contentarea {
 	padding-bottom: 5em;
@@ -197,10 +197,10 @@ a:hover
 .selectedperson
 {
 	border-radius: 3px;
-}
-.selectedperson *
-{
 	background-color: #eee;
+	margin-top: 3em;
+	padding-left: 1em;
+	padding-right: 1em;
 }
 .selectedperson img
 {
