--- a/css/style.css
+++ b/css/style.css
@@ -362,8 +362,44 @@ div.row.featuredboxes div.description:before
     top: -20px;
     left: 45%;
 }
-div.row.featuredboxes div.description h3.featured-box-subtitle{
+div.row.featuredboxes div.description h3.featured-box-subtitle
+{
 	color: white;
 	line-height: 1.2em;
 	margin: 12px 0px;
+}
+table.homepage tr:first-child td
+{
+    border-top: none;
+}
+.dropdown-toggle.categories
+{
+    border-bottom-right-radius: 4px;
+    border-bottom-left-radius: 4px;
+    border-top: none;
+}
+.viewmore
+{
+    padding: 8px 30px;
+    font-size: 30px;
+    margin-bottom: 2em;
+    border-radius: 4px;
+    box-shadow: 0 0 10px black;
+    transition: box-shadow 0.25s;
+}
+.viewmore:hover
+{
+    padding: 8px 30px;
+    font-size: 30px;
+    margin-bottom: 2em;
+    border-radius: 4px;
+    box-shadow: 0 0 50px #00AEEF;
+}
+.viewmore:active, .viewmore:focus
+{
+    padding: 8px 30px;
+    font-size: 30px;
+    margin-bottom: 2em;
+    border-radius: 4px;
+    box-shadow: 0 0 50px black, inset 0 0 0 150px rgba(0,0,0,.5);
 }
